Kapt: Launch integration tests also under Java 9