@@ -37,7 +37,6 @@ import org.jetbrains.kotlin.kapt3.javac.KaptJavaLog
 import org.jetbrains.kotlin.kapt3.parseJavaFiles
 import org.jetbrains.kotlin.kapt3.stubs.ClassFileToSourceStubConverter
 import org.jetbrains.kotlin.kapt3.util.KaptLogger
-import org.jetbrains.kotlin.kapt3.util.isJava9OrLater
 import org.jetbrains.kotlin.resolve.jvm.extensions.AnalysisHandlerExtension
 import org.jetbrains.kotlin.resolve.jvm.extensions.PartialAnalysisHandlerExtension
 import org.jetbrains.kotlin.test.ConfigurationKind
@@ -46,11 +45,8 @@ import org.jetbrains.kotlin.test.util.trimTrailingWhitespacesAndAddNewlineAtEOF
 import org.jetbrains.kotlin.utils.PathUtil
 import org.jetbrains.kotlin.utils.addToStdlib.firstIsInstance
 import java.io.File
-import java.net.URL
-import java.net.URLClassLoader
 import java.nio.file.Files
 import java.util.*
-import java.util.concurrent.TimeUnit
 import com.sun.tools.javac.util.List as JavacList
 
 abstract class AbstractKotlinKapt3Test : CodegenTestCase() {
@@ -159,7 +155,7 @@ abstract class AbstractKotlinKapt3Test : CodegenTestCase() {
             wholeFile: File)
 }
 
-open class AbstractClassFileToSourceStubConverterTest : AbstractKotlinKapt3Test() {
+open class AbstractClassFileToSourceStubConverterTest : AbstractKotlinKapt3Test(), Java9TestLauncher {
     companion object {
         private val KOTLIN_METADATA_GROUP = "[a-z0-9]+ = (\\{.+?\\}|[0-9]+)"
         private val KOTLIN_METADATA_REGEX = "@kotlin\\.Metadata\\(($KOTLIN_METADATA_GROUP)(, $KOTLIN_METADATA_GROUP)*\\)".toRegex()
@@ -184,45 +180,7 @@ open class AbstractClassFileToSourceStubConverterTest : AbstractKotlinKapt3Test(
 
     override fun doTest(filePath: String) {
         super.doTest(filePath)
-
-        if (!isJava9OrLater) {
-            doTestWithJdk9(filePath)
-        }
-    }
-
-    private fun doTestWithJdk9(filePath: String) {
-        val jdk9Home = KotlinTestUtils.getJdk9HomeIfPossible() ?: run {
-            println("JDK9 not found, the test was skipped")
-            return
-        }
-
-        val javaExe = File(jdk9Home, "bin/java.exe").takeIf { it.exists() } ?: File(jdk9Home, "bin/java")
-        assert(javaExe.exists()) { "Can't find 'java' executable in $jdk9Home" }
-
-        val currentJavaHome = System.getProperty("java.home")
-        val classpath = collectClasspath(AbstractClassFileToSourceStubConverterTest::class.java.classLoader)
-                .filter { !it.path.startsWith(currentJavaHome) }
-
-        val process = ProcessBuilder(
-                javaExe.absolutePath,
-                "--illegal-access=warn",
-                "-ea",
-                "-classpath",
-                classpath.joinToString(File.pathSeparator),
-                AbstractClassFileToSourceStubConverterTest::class.java.name,
-                filePath
-        ).inheritIO().start()
-
-        process.waitFor(3, TimeUnit.MINUTES)
-        if (process.exitValue() != 0) {
-            throw AssertionError("Java 9 test process exited with exit code ${process.exitValue()} \n")
-        }
-    }
-
-    private fun collectClasspath(classLoader: ClassLoader?): List<URL> = when (classLoader) {
-        is URLClassLoader -> classLoader.urLs.asList() + collectClasspath(classLoader.parent)
-        is ClassLoader -> collectClasspath(classLoader.parent)
-        else -> emptyList()
+        doTestWithJdk9(AbstractClassFileToSourceStubConverterTest::class.java, filePath)
     }
 
     override fun check(kaptContext: KaptContext<GenerationState>, javaFiles: List<File>, txtFile: File, wholeFile: File) {
